Refactor OS Build Pipeline for release management
Updated the workflow to include release creation and commit message retrieval.

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,13 +1,15 @@
-name: OS Build Pipeline
+name: OS Build and Release
 
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+
+# Permission nécessaire pour créer une release et uploader des fichiers
+permissions:
+  contents: write
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,15 +21,27 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y nasm gcc binutils make coreutils
 
-      - name: Create build directory
-        run: mkdir -p build
-
       - name: Build OS Image
-        run: make all
+        run: |
+          mkdir -p build
+          make all
 
-      - name: Upload OS Image
-        uses: actions/upload-artifact@v4
+      - name: Get Commit Message
+        id: commit_info
+        # On récupère la première ligne du message du commit pour le titre de la release
+        run: |
+          MSG=$(git log -1 --pretty=%s)
+          echo "COMMIT_MSG=$MSG" >> $GITHUB_ENV
+          # On crée aussi un tag unique basé sur le numéro du run
+          echo "TAG_NAME=build-${{ github.run_number }}" >> $GITHUB_ENV
+
+      - name: Create Release and Upload os.img
+        uses: softprops/action-gh-release@v2
         with:
-          name: os-image
-          path: build/os.img
-          if-no-files-found: error
+          tag_name: ${{ env.TAG_NAME }}
+          name: ${{ env.COMMIT_MSG }}
+          draft: false
+          prerelease: false
+          files: build/os.img
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
